--- a/index.html
+++ b/index.html
@@ -15,28 +15,21 @@
 <body>
     <header class="cabeçalho">
         <img class="cabeçalho-logotipo" src="teaching 1.png" alt="robô escrevendo em uma lousa">
-        <h1 class="cabeçalho-título">Escola de Robótica</h1>
+        <h1 class="cabeçalho-título">Medidor de PH</h1>
         <ul class="cabeçalho-lista">
-            <li class="cabeçalho-lista-item1">Missão de Nossa Escola</li>
-            <li class="cabeçalho-lista-item2">Equipe de Professores</li>
+            <li class="cabeçalho-lista-item1">Missão de Nossa Empresa</li>
+            <li class="cabeçalho-lista-item2">Equipe de Servidores</li>
         </ul>
     </header>
 
     <section class="nossa-escola">
         <div class="nossa-escola-div">
-            <h2 class="nossa-escola-título">Nossa Escola</h2>
-            <p class="nossa-escola-texto1">Mussum Ipsum, cacilds vidis litro abertis. Paisis, filhis, espiritis santis.
-                Si
-                num tem leite então bota uma pinga aí cumpadi! Todo mundo vê os porris que eu tomo, mas ninguém vê os
-                tombis
-                que eu levo! Detraxit consequat et quo num tendi nada.</p>
-            <p class="nossa-escola-texto2">Nulla id gravida magna, ut semper sapien. Copo furadis é disculpa de bebadis,
-                arcu quam euismod magna. Casamentiss faiz malandris se pirulitá. Suco de cevadiss, é um leite divinis,
-                qui
-                tem lupuliz, matis, aguis e fermentis.</p>
+            <h2 class="nossa-escola-título">Tutorial</h2>
+            <p class="nossa-escola-texto1">Para descobrir o PH de cada cultura apenas abra a caixa de culturas e selecione a cultura desejada</p>
+            <p class="nossa-escola-texto2">Selecione a cultura</p>
         </div>
         <img class="nossa-escola-imagem" src="Robotics-pana.png" alt="braços robóticos">
-    </section>
+    </section>https://github.com/Gustavoaluno220/agrinhoprogramacaonovo.git
 
     <section class="equipe">
         <h2 class="equipe-título">Equipe docente</h2>
@@ -68,7 +61,7 @@
                 <img class="professor" src="p149f166.png" alt="Professor Dragonite">
                 <h3 class="professor-nome">Dragonite</h3>
                 <a href="https://br.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">
-                    <img class="ícone" src="linkedin (1).png" alt="ícone do linkedin">
+                    <img class="ícone" src="linkedin (1).png" alt="ícone do https://github.com/Gustavoaluno220/agrinhoprogramacaonovo.gitlinkedin">
                 </a>
                 <a href="https://github.com/JoanirRibeiro">
                     <img class="ícone" src="github (1).png" alt="ícone do github">
@@ -113,7 +106,7 @@
 
     <footer class="rodapé">
         <img class="rodapé-imagem" src="teaching 1.png" alt="robô em pé">
-        <h3 class="rodapé-título">Desenvolvido por Joanir Fernando Ribeiro</h3>
+        <h3 class="rodapé-título">Gustavoaluno220</h3>
         <a href="https://github.com/JoanirRibeiro">
         <img class="rodapé-ícone" src="github (1).png" alt="">
         </a>
