--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="nossa-escola-div">
             <h2 class="nossa-escola-título">Tutorial</h2>
             <p class="nossa-escola-texto1">Para descobrir o PH de cada cultura apenas abra a caixa de culturas e selecione a cultura desejada</p>
-            <p class="nossa-escola-texto2">Selecione a cultura</p>
+            <p class="nossa-escola-texto2">Selecione a cultura</p>Gustavoaluno220
         </div>
         <img class="nossa-escola-imagem" src="Robotics-pana.png" alt="braços robóticos">
     </section>https://github.com/Gustavoaluno220/agrinhoprogramacaonovo.git
@@ -34,7 +34,7 @@
     <section class="equipe">
         <h2 class="equipe-título">Equipe docente</h2>
         <div class="equipe-div-todos">
-            <span></span>
+            <span></span>Gustavoaluno220
             <div class="equipe-div">
                 <img class="professor" src="p149f166.png" alt="Professor Dragonite">
                 <h3 class="professor-nome">Dragonite</h3>
@@ -53,7 +53,7 @@
                     <img class="ícone" src="linkedin (1).png" alt="ícone do linkedin">
                 </a>
                 <a href="https://github.com/JoanirRibeiro">
-                    <img class="ícone" src="github (1).png" alt="ícone do github">
+                    <img class="ícone" src="github (1).png" alt="ícone do github">Gustavoaluno220
                 </a>
             </div>
 
@@ -76,6 +76,17 @@
                     <img class="ícone" src="linkedin (1).png" alt="ícone do linkedin">
                 </a>
                 <a href="https://github.com/JoanirRibeiro">
+                    <img class="ícone" src="github (1).png" alt="ícone do github">Gustavoaluno220
+                </a>
+            </div>
+
+            <div class="equipe-div">
+                <img class="professor" src="p149f166.png" alt="Professor Dragonite">
+                <h3 class="professor-nome">Dragonite</h3>
+                <a href="https://br.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">
+                    <img class="ícone" src="linkedin (1).png" alt="ícone do linkedin">
+                </a>
+                <a href="https://github.com/Gustavoaluno220">
                     <img class="ícone" src="github (1).png" alt="ícone do github">
                 </a>
             </div>
@@ -86,18 +97,7 @@
                 <a href="https://br.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">
                     <img class="ícone" src="linkedin (1).png" alt="ícone do linkedin">
                 </a>
-                <a href="https://github.com/JoanirRibeiro">
-                    <img class="ícone" src="github (1).png" alt="ícone do github">
-                </a>
-            </div>
-
-            <div class="equipe-div">
-                <img class="professor" src="p149f166.png" alt="Professor Dragonite">
-                <h3 class="professor-nome">Dragonite</h3>
-                <a href="https://br.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">
-                    <img class="ícone" src="linkedin (1).png" alt="ícone do linkedin">
-                </a>
-                <a href="https://github.com/JoanirRibeiro">
+                <a href="https://github.com/Gustavoaluno220">
                     <img class="ícone" src="github (1).png" alt="ícone do github">
                 </a>
             </div>
@@ -107,7 +107,7 @@
     <footer class="rodapé">
         <img class="rodapé-imagem" src="teaching 1.png" alt="robô em pé">
         <h3 class="rodapé-título">Gustavoaluno220</h3>
-        <a href="https://github.com/JoanirRibeiro">
+        <a href="https://github.com/Gustavoaluno220">
         <img class="rodapé-ícone" src="github (1).png" alt="">
         </a>
     </footer>
