--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <section class="nossa-escola">
-        <div class="nossa-escola-div">
+        <div class="nossa-escola-div">Gustavoaluno220
             <h2 class="nossa-escola-título">Tutorial</h2>
             <p class="nossa-escola-texto1">Para descobrir o PH de cada cultura apenas abra a caixa de culturas e selecione a cultura desejada</p>
             <p class="nossa-escola-texto2">Selecione a cultura</p>Gustavoaluno220
@@ -52,7 +52,7 @@
                 <a href="https://br.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">
                     <img class="ícone" src="linkedin (1).png" alt="ícone do linkedin">
                 </a>
-                <a href="https://github.com/JoanirRibeiro">
+                <a href="https://github.com/JoanirRibeiro">Gustavoaluno220
                     <img class="ícone" src="github (1).png" alt="ícone do github">Gustavoaluno220
                 </a>
             </div>
@@ -60,7 +60,7 @@
             <div class="equipe-div">
                 <img class="professor" src="p149f166.png" alt="Professor Dragonite">
                 <h3 class="professor-nome">Dragonite</h3>
-                <a href="https://br.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">
+                <a href="https://br.linkedin.com/?trk=guest_homepage-basiGustavoaluno220c_nav-header-logo">
                     <img class="ícone" src="linkedin (1).png" alt="ícone do https://github.com/Gustavoaluno220/agrinhoprogramacaonovo.gitlinkedin">
                 </a>
                 <a href="https://github.com/JoanirRibeiro">
