--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <h2 class="nossa-escola-título">Tutorial</h2>
             <p class="nossa-escola-texto1">Para descobrir o PH de cada cultura apenas abra a caixa de culturas e selecione a cultura desejada</p>
             <p class="nossa-escola-texto2">Selecione a cultura</p>Gustavoaluno220
-        </div>
-        <img class="nossa-escola-imagem" src="Robotics-pana.png" alt="braços robóticos">
+        </div>Gustavoaluno220Gustavoaluno220
+        <img class="nossa-escola-imagem" src="Robotics-pana.png" alt="tabela-de-ph.png">
     </section>https://github.com/Gustavoaluno220/agrinhoprogramacaonovo.git
 
     <section class="equipe">
@@ -40,7 +40,7 @@
                 <h3 class="professor-nome">Dragonite</h3>
                 <a href="https://br.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">
                     <img class="ícone" src="linkedin (1).png" alt="ícone do linkedin">
-                </a>
+                </a>Gustavoaluno220
                 <a href="https://github.com/JoanirRibeiro">
                     <img class="ícone" src="github (1).png" alt="ícone do github">
                 </a>
@@ -56,7 +56,7 @@
                     <img class="ícone" src="github (1).png" alt="ícone do github">Gustavoaluno220
                 </a>
             </div>
-
+            Gustavoaluno220
             <div class="equipe-div">
                 <img class="professor" src="p149f166.png" alt="Professor Dragonite">
                 <h3 class="professor-nome">Dragonite</h3>
@@ -71,7 +71,7 @@
             <span></span>
             <div class="equipe-div">
                 <img class="professor" src="p149f166.png" alt="Professor Dragonite">
-                <h3 class="professor-nome">Dragonite</h3>
+                <h3 class="professor-nome">Dragonite</h3>Gustavoaluno220
                 <a href="https://br.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">
                     <img class="ícone" src="linkedin (1).png" alt="ícone do linkedin">
                 </a>
