--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p class="nossa-escola-texto1">Para descobrir o PH de cada cultura apenas abra a caixa de culturas e selecione a cultura desejada</p>
             <p class="nossa-escola-texto2">Selecione a cultura</p>Gustavoaluno220
         </div>Gustavoaluno220Gustavoaluno220
-        <img class="nossa-escola-imagem" src="Robotics-pana.png" alt="tabela-de-ph.png">
+        <img class="tabela-de-ph" src="tabela-de-ph.png" alt="tabela-de-ph.png">
     </section>https://github.com/Gustavoaluno220/agrinhoprogramacaonovo.git
 
     <section class="equipe">
