--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             <h2 class="nossa-escola-título">Tutorial</h2>
             <p class="nossa-escola-texto1">Para descobrir o PH de cada cultura apenas abra a caixa de culturas e selecione a cultura desejada</p>
             <p class="nossa-escola-texto2">Selecione a cultura</p>Gustavoaluno220
-        </div>Gustavoaluno220Gustavoaluno220
         <img class="tabela-de-ph" src="tabela-de-ph.png" alt="tabela-de-ph.png">
     </section>https://github.com/Gustavoaluno220/agrinhoprogramacaonovo.git
 
@@ -41,7 +40,7 @@
                 <a href="https://br.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">
                     <img class="ícone" src="linkedin (1).png" alt="ícone do linkedin">
                 </a>Gustavoaluno220
-                <a href="https://github.com/JoanirRibeiro">
+                <a href="https://github.com/Gustavoaluno220">
                     <img class="ícone" src="github (1).png" alt="ícone do github">
                 </a>
             </div>
