--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
     </section>https://github.com/Gustavoaluno220/agrinhoprogramacaonovo.git
 
     <section class="equipe">
-        <h2 class="equipe-título">Equipe docente</h2>
+        <h2 class="equipe-título">Selecione a cultura</h2>
         <div class="equipe-div-todos">
-            <span></span>Gustavoaluno220
             <div class="equipe-div">
                 <img class="professor" src="p149f166.png" alt="Professor Dragonite">
                 <h3 class="professor-nome">Dragonite</h3>
@@ -55,7 +54,6 @@
                     <img class="ícone" src="github (1).png" alt="ícone do github">Gustavoaluno220
                 </a>
             </div>
-            Gustavoaluno220
             <div class="equipe-div">
                 <img class="professor" src="p149f166.png" alt="Professor Dragonite">
                 <h3 class="professor-nome">Dragonite</h3>
