--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <div class="nossa-escola-div">Gustavoaluno220
             <h2 class="nossa-escola-título">Tutorial</h2>
             <p class="nossa-escola-texto1">Para descobrir o PH de cada cultura apenas abra a caixa de culturas e selecione a cultura desejada</p>
-            <p class="nossa-escola-texto2">Selecione a cultura</p>Gustavoaluno220
+            <p class="nossa-escola-texto2">Quanto mais próximo de 7 for o valor do PH, mais ácido o solo precisará ser para plantar a cultura escolhida;</p>Gustavoaluno220
+            <p>Quano mais próximo de 14 or o valor do PH, mais básico (ou alcalino) o solo precisará ser para plantar a cultura escolhida;</p>
+            <p>Se o alor do PH for igual a 7, o solo precisará ser neutro para plantar a cultura escolhida. Obs: Para o PH se considerdo neutro o número precisa ser EXATAMENTE 7 (se ouver números decimais depois do 7, o PH será alcalino, não neutro.</p>
         <img class="tabela-de-ph" src="tabela-de-ph.png" alt="tabela-de-ph.png">
     </section>https://github.com/Gustavoaluno220/agrinhoprogramacaonovo.git
 
