--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <h2 class="equipe-título">Selecione a cultura</h2>
         <div class="equipe-div-todos">
             <div class="equipe-div">
-                <img class="professor" src="p149f166.png" alt="Professor Dragonite">
-                <h3 class="professor-nome">Dragonite</h3>
-                <a href="https://br.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">
+                <img class="professor" src="p149f166.png" alt="Tomate">
+                <h3 class="professor-nome">Tomate</h3>
+                <a href="image.png">
                     <img class="ícone" src="linkedin (1).png" alt="ícone do linkedin">
                 </a>Gustavoaluno220
                     <img class="ícone" src="github (1).png" alt="ícone do github">
