--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="cabeçalho">
-        <img class="cabeçalho-logotipo" src="teaching 1.png" alt="robô escrevendo em uma lousa">
+        <img class="cabeçalho-logotipo" src="teaching 1.png">
         <h1 class="cabeçalho-título">Medidor de PH</h1>
         <ul class="cabeçalho-lista">
             <li class="cabeçalho-lista-item1">Missão de Nossa Empresa</li>
@@ -29,7 +29,7 @@
             <p>Quano mais próximo de 14 or o valor do PH, mais básico (ou alcalino) o solo precisará ser para plantar a cultura escolhida;</p>
             <p>Se o alor do PH for igual a 7, o solo precisará ser neutro para plantar a cultura escolhida. Obs: Para o PH se considerdo neutro o número precisa ser EXATAMENTE 7 (se ouver números decimais depois do 7, o PH será alcalino, não neutro.</p>
         <img class="tabela-de-ph" src="tabela-de-ph.png" alt="tabela-de-ph.png">
-    </section>https://github.com/Gustavoaluno220/agrinhoprogramacaonovo.git
+    </section>
 
     <section class="equipe">
         <h2 class="equipe-título">Selecione a cultura</h2>
@@ -45,18 +45,18 @@
             </div>
 
             <div class="equipe-div">
-                <img class="professor" src="p149f166.png" alt="Professor Dragonite">
-                <h3 class="professor-nome">Dragonite</h3>
+                <img class="professor" src="p149f166.png" alt="Milho">
+                <h3 class="professor-nome">Milho</h3>
                 <a href="https://br.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">
                     <img class="ícone" src="linkedin (1).png" alt="ícone do linkedin">
                 </a>
-                <a href="https://github.com/JoanirRibeiro">Gustavoaluno220
-                    <img class="ícone" src="github (1).png" alt="ícone do github">Gustavoaluno220
+                <a href="https://github.com/JoanirRibeiro">
+                    <img class="ícone" src="github (1).png" alt="ícone do github">
                 </a>
             </div>
             <div class="equipe-div">
-                <img class="professor" src="p149f166.png" alt="Professor Dragonite">
-                <h3 class="professor-nome">Dragonite</h3>
+                <img class="professor" src="p149f166.png" alt="Batata">
+                <h3 class="professor-nome">Batat</h3>
                 <a href="https://br.linkedin.com/?trk=guest_homepage-basiGustavoaluno220c_nav-header-logo">
                     <img class="ícone" src="linkedin (1).png" alt="ícone do https://github.com/Gustavoaluno220/agrinhoprogramacaonovo.gitlinkedin">
                 </a>
@@ -67,19 +67,19 @@
             <span></span>
             <span></span>
             <div class="equipe-div">
-                <img class="professor" src="p149f166.png" alt="Professor Dragonite">
-                <h3 class="professor-nome">Dragonite</h3>Gustavoaluno220
+                <img class="professor" src="p149f166.png" alt="Cebola">
+
                 <a href="https://br.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">
                     <img class="ícone" src="linkedin (1).png" alt="ícone do linkedin">
                 </a>
                 <a href="https://github.com/JoanirRibeiro">
-                    <img class="ícone" src="github (1).png" alt="ícone do github">Gustavoaluno220
+                    <img class="ícone" src="github (1).png" alt="ícone do github">
                 </a>
             </div>
 
             <div class="equipe-div">
-                <img class="professor" src="p149f166.png" alt="Professor Dragonite">
-                <h3 class="professor-nome">Dragonite</h3>
+                <img class="professor" src="p149f166.png" alt="Repolho">
+                <h3 class="professor-nome">Repolho</h3>
                 <a href="https://br.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">
                     <img class="ícone" src="linkedin (1).png" alt="ícone do linkedin">
                 </a>
@@ -89,8 +89,8 @@
             </div>
 
             <div class="equipe-div">
-                <img class="professor" src="p149f166.png" alt="Professor Dragonite">
-                <h3 class="professor-nome">Dragonite</h3>
+                <img class="professor" src="p149f166.png" alt="Alface">
+                <h3 class="professor-nome">Alface</h3>
                 <a href="https://br.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">
                     <img class="ícone" src="linkedin (1).png" alt="ícone do linkedin">
                 </a>
