--- a/index.html
+++ b/index.html
@@ -56,12 +56,9 @@
             </div>
             <div class="equipe-div">
                 <img class="professor" src="p149f166.png" alt="Batata">
-                <h3 class="professor-nome">Batat</h3>
-                <a href="https://br.linkedin.com/?trk=guest_homepage-basiGustavoaluno220c_nav-header-logo">
+                <h3 class="professor-nome">Batata</h3>
                     <img class="ícone" src="linkedin (1).png" alt="ícone do https://github.com/Gustavoaluno220/agrinhoprogramacaonovo.gitlinkedin">
-                </a>
-                <a href="https://github.com/JoanirRibeiro">
-                    <img class="ícone" src="github (1).png" alt="ícone do github">
+            </a>
                 </a>
             </div>
             <span></span>
