--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="nossa-escola">
             <h2 class="nossa-escola-título">Tutorial</h2>
             <p class="nossa-escola-texto1">Para descobrir o PH de cada cultura apenas abra a caixa de culturas e selecione a cultura desejada</p>
-            <p class="nossa-escola-texto2">Quanto mais próximo de 7 for o valor do PH, mais ácido o solo precisará ser para plantar a cultura escolhida;</p>Gustavoaluno220
+            <p class="nossa-escola-texto2">Quanto mais próximo de 7 for o valor do PH, mais ácido o solo precisará ser para plantar a cultura escolhida;</p>
             <p>Quano mais próximo de 14 or o valor do PH, mais básico (ou alcalino) o solo precisará ser para plantar a cultura escolhida;</p>
             <p>Se o alor do PH for igual a 7, o solo precisará ser neutro para plantar a cultura escolhida. Obs: Para o PH se considerdo neutro o número precisa ser EXATAMENTE 7 (se ouver números decimais depois do 7, o PH será alcalino, não neutro.</p>
         <img class="tabela-de-ph" src="tabela-de-ph.png" alt="tabela-de-ph.png">
@@ -54,18 +54,16 @@
             <span></span>
             <span></span>
             <div class="equipe-div">
-                <img class="professor" src="p149f166.png" alt="Cebola">
+                <h3 class="professor-nome">Cebola</h3>
                 </a>
             </div>
 
             <div class="equipe-div">
-                <img class="professor" src="p149f166.png" alt="Repolho">
                 <h3 class="professor-nome">Repolho</h3>
                 </a>
             </div>
 
             <div class="equipe-div">
-                <img class="professor" src="p149f166.png" alt="Alface">
                 <h3 class="professor-nome">Alface</h3>
                 </a>
             </div>
