--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </section>
 
     <footer class="rodapé">
-        <img class="rodapé-imagem" src="teaching 1.png" alt="robô em pé">
+        <img class="rodapé-imagem" src="programando.jpg" alt="programa">
         <h3 class="rodapé-título">Gustavoaluno220</h3>
         <a href="https://github.com/Gustavoaluno220">
         <img class="rodapé-ícone" src="github (1).png" alt="">
