--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="cabeçalho">
-        <img class="cabeçalho-logotipo" src="teaching 1.png">
+        <img class="cabeçalho-logotipo" src="becher.png">
         <h1 class="cabeçalho-título">Medidor de PH</h1>
         <ul class="cabeçalho-lista">
             <li class="cabeçalho-lista-item1">Missão de Nossa Empresa</li>
